--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -8,8 +8,8 @@ theme : moon
 theme-override : assets/css/PITCHME.css
 # theme-override : assets/css/PITCHME.codemax.css
 highlight : ir-black
-logo : assets/image/logo.png
-background : assets/image/binary-strings-black.jpg
+logo : assets/logo.png
+background : assets/binary-strings-black.jpg
 background-opacity : 15
 transition : none
 published : true
