--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -4,8 +4,8 @@
 # For details, visit Wiki:
 # https://github.com/gitpitch/gitpitch/wiki/Slideshow-Settings
 #
-theme : moon
-theme-override : assets/css/PITCHME.css
+#theme : moon
+#theme-override : assets/css/PITCHME.css
 # theme-override : assets/css/PITCHME.codemax.css
 highlight : ir-black
 logo : assets/logo.png
