--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -4,10 +4,10 @@
 # For details, visit Wiki:
 # https://github.com/gitpitch/gitpitch/wiki/Slideshow-Settings
 #
-#theme : moon
+theme : white
 #theme-override : assets/css/PITCHME.css
 # theme-override : assets/css/PITCHME.codemax.css
-highlight : ir-black
+#highlight : ir-black
 logo : assets/logo.png
 #background : assets/binary-strings-black.jpg
 #background-opacity : 15
